 o allow to use an RDS instead of a fasta file as 'Unique Peptides Database';
   closes #55 [2014-04-29 Tue]
 o add removePrecursor and tolerance argument to loadSpectrumXmlFiles and
   loadFragmentCsvFiles; closes #59 [2014-04-30 Wed]
 o introduce IisL argument to dbUniquePeptideSet which treats I/L as same
   aminoacid if IisL == TRUE (default: IisL = FALSE);
   closes #60 [2014-04-30 Wed]

CHANGES IN VERSION 1.7.2
------------------------
 o add loadSpectrumXmlFiles and loadFragmentCsvFiles method [2014-04-23 Wed]
 o add crossMatching, setCrossMatchingPpmTolerance and
   getCrossMatchingPpmTolerance method [2014-04-23 Wed]
 o add plotCrossMatching method  [2014-04-24 Thu]
 o add plotCrossMatchingSummary [2014-04-25 Fri]
 o add {set,get}CrossMatchingMinimalNumberOfCommonPeaks [2014-04-25 Fri]
 o add filterMatchedEMRTsByCommonPeaks [2014-04-25 Fri]
 o add testthat to Suggests [2014-04-25 Fri]
 o add matchColumn argument to filterMatchedEMRTsByCommonPeaks and
   plotCrossMatchingSummary [2014-04-28 Mon]

CHANGES IN VERSION 1.7.1
------------------------
 o add updateSynapterObject function [2014-04-23 Wed]
 o fix retention time model calculation in plotFeatures(..., what="some")
   [2014-04-28 Mon]

CHANGES IN VERSION 1.7.0
------------------------
 o new devel version for Bioc 3.0

CHANGES IN VERSION 1.6.0
------------------------
 o new release version for Bio 2.14

CHANGES IN VERSION 1.5.7
------------------------
 o Enable setting number of missed cleavages (closes #53) [2014-03-24 Mon]

CHANGES IN VERSION 1.5.6
------------------------
 o change the default value of grid.ppm.from to 2
   (was 5 before) [2014-03-05 Wed]
 o change the separator in GridDetails' names to ":"
   (was "." before) [2014-03-07 Fri]
 o test for corresponding Pep3D file (closes #42) [2014-03-19 Wed]

CHANGES IN VERSION 1.5.5
------------------------
 o fix a bug in the calculation of non unique matches in gridSearch2