@@ -46,6 +46,7 @@ setGeneric("filterQuantProtFpr", function(object, ...) standardGeneric("filterQu
 setGeneric("filterIdentProtFpr", function(object, ...) standardGeneric("filterIdentProtFpr"))
 setGeneric("filterIdentPpmError", function(object, ...) standardGeneric("filterIdentPpmError"))
 setGeneric("filterQuantPpmError", function(object, ...) standardGeneric("filterQuantPpmError"))
+setGeneric("filterFragments", function(object, ...) standardGeneric("filterFragments"))
 setGeneric("filterMatchedEMRTsByCommonPeaks", function(object, ...) standardGeneric("filterMatchedEMRTsByCommonPeaks"))
 setGeneric("plotPpmError", function(object, ...) standardGeneric("plotPpmError"))
 setGeneric("plotRt", function(object, ...) standardGeneric("plotRt"))
@@ -55,6 +56,8 @@ setGeneric("plotFeatures", function(object, ...) standardGeneric("plotFeatures")
 setGeneric("plotCrossMatching", function(object, ...) standardGeneric("plotCrossMatching"))
 setGeneric("plotCrossMatchingSummary", function(object, ...) standardGeneric("plotCrossMatchingSummary"))
 setGeneric("plotCrossMatchingPerformance", function(object, ...) standardGeneric("plotCrossMatchingPerformance"))
+setGeneric("plotCumulativeNumberOfFragments", function(object, ...) standardGeneric("plotCumulativeNumberOfFragments"))
+setGeneric("getEMRTtable", function(object, ...) standardGeneric("getEMRTtable"))
 setGeneric("getEMRTtable", function(object, ...) standardGeneric("getEMRTtable"))
 setGeneric("getEMRTtable", function(object, ...) standardGeneric("getEMRTtable"))
 setGeneric("plotEMRTtable", function(object, ...) standardGeneric("plotEMRTtable"))
