@@ -20,4 +20,6 @@
   mapply(.getSpectrum, keys, spectralist)
 }
 
-
+.sumAllPeakCounts <- function(msexp) {
+  sum(unlist(peaksCount(msexp)))
+}
