@@ -8,6 +8,8 @@ CHANGES IN VERSION 1.7.3
  o introduce IisL argument to dbUniquePeptideSet which treats I/L as same
    aminoacid if IisL == TRUE (default: IisL = FALSE);
    closes #60 [2014-04-30 Wed]
+ o introduce filterFragments and plotCumulativeNumberOfFragments method.
+   [2014-05-08 Thu]
 
 CHANGES IN VERSION 1.7.2
 ------------------------
